<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_registerName"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:minHeight="48dp" android:hint="@string/prompt_FullName"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_registerEmail"
            app:layout_constraintTop_toBottomOf="@+id/et_registerName" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/prompt_email"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:minHeight="48dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_registerPassword"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_registerEmail" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:hint="@string/prompt_password"
            android:minHeight="48dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_confirmPassword"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_registerPassword" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:hint="@string/key_confirm_password" android:minHeight="48dp"/>
    <Button
            android:text="@string/Registration"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/et_registerNewAccount"
            app:layout_constraintTop_toBottomOf="@+id/et_confirmPassword" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
    <Button
            android:text="@string/key_backToLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/et_backToLogin"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_registerNewAccount" android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>