<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomePageActivity">
    <Button
            android:text="@string/settings_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            android:onClick="launchSettings" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="284dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.529"
            android:layout_marginEnd="50dp" android:layout_marginStart="50dp"/>
    <Button
            android:text="@string/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/map_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.529" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button" android:onClick="launchGoogleMaps"
            android:layout_marginTop="60dp" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"/>
    <Button
            android:text="@string/wallet_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/wallet_btn"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintBottom_toTopOf="@+id/profile_btn" app:layout_constraintVertical_bias="0.493"
            android:layout_marginEnd="50dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
            android:onClick="launchWalletPage"/>
    <Button
            android:text="@string/profile_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/profile_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="60dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp" android:onClick="launchProfilePage"/>
    <Button
            android:text="@string/key_Logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/et_Logout"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="35dp" android:layout_marginEnd="35dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>