<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

    <Button
            android:id="@+id/general_settings_button"
            android:text="@string/general_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchGeneralSettings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" />
    <Button
            android:id="@+id/notifications_settings_button"
            android:text="@string/notifications_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchNotificationsSettings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/general_settings_button"
            android:layout_marginTop="16dp" />
    <Button
            android:id="@+id/account_settings_button"
            android:text="@string/account_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchAccountSettings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notifications_settings_button"
            android:layout_marginTop="16dp" />
    <Button
            android:id="@+id/voice_sound_settings_button"
            android:text="@string/account_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchVoiceSoundSettings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_settings_button"
            android:layout_marginTop="16dp" />
    <Button
            android:id="@+id/Privacy_settings_button"
            android:text="@string/privacy_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchPrivacySettings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/voice_sound_settings_button"
            android:layout_marginTop="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>