<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VerifyEmailActivity">

    <TextView
            android:text="@string/verification_text_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/prompt_Verification"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/verify_btn" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp" android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" app:layout_constraintVertical_bias="0.495"
    />
    <Button
            android:text="@string/key_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/verify_btn"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="200dp"
            app:layout_constraintTop_toBottomOf="@+id/prompt_Verification"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/returnToLoginBtn"
            android:text="@string/key_backToLogin" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/verify_btn"
            android:layout_marginTop="16dp" android:visibility="invisible" android:enabled="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>