<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_Email"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="100dp"
            android:minHeight="48dp" android:hint="@string/prompt_email"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_Password"
            app:layout_constraintTop_toBottomOf="@+id/et_Email" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            android:hint="@string/prompt_password" android:minHeight="48dp"/>
    <Button
            android:text="@string/key_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/et_Register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_Login"/>
    <Button
            android:text="@string/Log_In"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/et_Login"
            app:layout_constraintTop_toBottomOf="@+id/et_Password" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/et_Register"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"/>
    <Button
            android:text="Go To HomePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/home_page_btn"
            app:layout_constraintTop_toBottomOf="@+id/et_Login" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="launchHomePage"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_ProgressBar"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/home_page_btn" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/et_Register" android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>